--- a/index.html
+++ b/index.html
@@ -12,29 +12,36 @@
 <body>
     <main class="main">
         <figure class="card card--marketer">
-            <div class="card__header">
-                <p class="card__big"><strong>Marketer+</strong></p>
-                <p><span class="card__primary"><strong>Pokročilé funkce</strong></span> vhodné zejména pro e‑shopy.
-                    E‑mailing založený na datech.</p>
-            </div>
-            <div class="card__body">
-                <p class="card__margin"><span class="card__kindaBig card__primary"><strong>200 Kč</strong></span> měsíčně</p>
-                <small>nebo 300 Kč při <a href="#" class="card__primary"><strong>měsíční platbě</strong></a></small>
-                <div class="button">
-                    <a href="#" class="card__button"><strong>Vyzkoušejte zdarma</strong></a>
+            <div class="card__padding">
+                <div class="card__header">
+                    <p class="card__big"><strong>Marketer+</strong></p>
+                    <p><span class="card__primary"><strong>Pokročilé funkce</strong></span> vhodné zejména pro e‑shopy.
+                        E‑mailing založený na datech.</p>
                 </div>
-            </div>
-            <div class="card__footer">
-                <ul>
-                    <li class="goodboy"><span class="card__primary"><strong>Neomezené množství e‑mailů</strong></span></li>
-                    <li class="goodboy">Drag&drop editor na tvorbu šablon</li>
-                    <li class="goodboy">170+ designových šablon</li>
-                    <li class="goodboy">AI generování předmětu a úpravy textů</li>
-                    <li class="goodboy">Integrace s e‑shopy</li>
-                    <li class="badboy">Slevové kupóny</li>
-                    <li class="badboy">Automatizace podle chování zákazníka</li>
-                </ul>
-
+                <div class="card__body">
+                    <p class="card__margin"><span class="card__kindaBig card__primary"><strong>200 Kč</strong></span>
+                        měsíčně</p>
+                    <div class="card__margin--2">
+                        <small>nebo 300 Kč při <a href="#" class="card__primary"><strong>měsíční
+                                    platbě</strong></a></small>
+                    </div>
+                    <div class="button">
+                        <a href="#" class="card__button"><strong>Vyzkoušejte zdarma</strong></a>
+                    </div>
+                </div>
+                <div class="card__footer">
+                    <ul>
+                        <li class="goodboy"><span class="card__primary"><strong>Neomezené množství
+                                    e‑mailů</strong></span>
+                        </li>
+                        <li class="goodboy">Drag&drop editor na tvorbu šablon</li>
+                        <li class="goodboy">170+ designových šablon</li>
+                        <li class="goodboy">AI generování předmětu a úpravy textů</li>
+                        <li class="goodboy">Integrace s e‑shopy</li>
+                        <li class="badboy">Slevové kupóny</li>
+                        <li class="badboy">Automatizace podle chování zákazníka</li>
+                    </ul>
+                </div>
             </div>
         </figure>
     </main>
