--- a/index.html
+++ b/index.html
@@ -11,19 +11,42 @@
 
 <body>
     <main class="main">
+        <figure class="card card--gold">
+            <div class="card__padding">
+                <div class="card__header">
+                    <p class="card__margin--top"><span class="special">🎉 SPECIÁLNÍ NABÍDKA</span></p>
+                    <p class="card__big"><strong>Gold</strong></p>
+                    <p>Ušetřete až 30%</p>
+                </div>
+                <div class="card__body card__margin">
+                    <div class="cost">
+                        <small>ROČNÍ PLATBA</small>
+                        <p class="text--gigachad"><strong>4&nbsp;990&nbsp;Kč</strong></p>
+                    </div>
+                </div>
+                <div class="card__footer">
+                    <ul>
+                        <li>12 měsíců za cenu 10</li>
+                        <li>Všechny prémiové funkce</li>
+                        <li>Prioritní onboarding</li>
+                        <li>Exkluzivní webináře</li>
+                    </ul>
+                    <div class="button">
+                        <a href="#" class="card__button"><strong>Využít nabídku</strong></a>
+                    </div>
+                </div>
+            </div>
+        </figure>
         <figure class="card card--marketer">
             <div class="card__padding">
                 <div class="card__header">
                     <p class="card__big"><strong>Marketer+</strong></p>
-                    <p><span class="card__primary"><strong>Pokročilé funkce</strong></span> vhodné zejména pro e‑shopy.
-                        E‑mailing založený na datech.</p>
+                    <p><span class="card__primary"><strong>Pokročilé funkce</strong></span> vhodné zejména pro e‑shopy. E‑mailing založený na datech.</p>
                 </div>
                 <div class="card__body">
-                    <p class="card__margin"><span class="card__kindaBig card__primary"><strong>200 Kč</strong></span>
-                        měsíčně</p>
+                    <p class="card__margin"><span class="card__kindaBig card__primary"><strong>200 Kč</strong></span> měsíčně</p>
                     <div class="card__margin--2">
-                        <small>nebo 300 Kč při <a href="#" class="card__primary"><strong>měsíční
-                                    platbě</strong></a></small>
+                        <small>nebo 300 Kč při <a href="#" class="card__primary"><strong>měsíční platbě</strong></a></small>
                     </div>
                     <div class="button">
                         <a href="#" class="card__button"><strong>Vyzkoušejte zdarma</strong></a>
@@ -31,9 +54,7 @@
                 </div>
                 <div class="card__footer">
                     <ul>
-                        <li class="goodboy"><span class="card__primary"><strong>Neomezené množství
-                                    e‑mailů</strong></span>
-                        </li>
+                        <li class="goodboy"><span class="card__primary"><strong>Neomezené množství e‑mailů</strong></span></li>
                         <li class="goodboy">Drag&drop editor na tvorbu šablon</li>
                         <li class="goodboy">170+ designových šablon</li>
                         <li class="goodboy">AI generování předmětu a úpravy textů</li>
